--- a/package.json
+++ b/package.json
@@ -1,15 +1,37 @@
 {
   "name": "sso",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "axios": "^0.21.1",
+    "firebase": "^8.6.8",
+    "local-storage": "^2.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-google-button": "^0.7.2",
+    "react-json-view": "^1.21.3",
+    "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^5.2.0",
+    "react-social-login-buttons": "^3.4.0",
+    "redux": "^4.0.1",
+    "redux-form": "~8.1.0",
+    "redux-persist": "^5.10.0",
+    "redux-saga": "0.16.2",
+    "redux-saga-test-plan": "^3.7.0",
+    "redux-thunk": "^2.3.0",
+    "typesafe-actions": "^3.0.0",
+    "web-vitals": "^1.1.2",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +56,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^4.0.1",
+    "npm-run-all": "^4.1.5",
+    "node-sass": "^4.12.0",
+    "node-sass-chokidar": "^1.3.4"
   }
 }
